<resources>
    <string name="app_name">cloudSeis</string>
    <string name="sign_in">Авторизация</string>
    <string name="sign_up">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="username">Имя пользователя</string>
    <string name="login">Логин</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="organization">Организация</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="map">Общая карта</string>
    <string name="registrars">Регистраторы</string>
    <string name="settings">Настройки</string>
    <string name="user">Мои станции</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="account">Аккаунт</string>
    <string name="station_image">Station image</string>
    <string name="station_name">Station name</string>


</resources>
